--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 DB_CONNECT = mongodb+srv://adou:azerty5@cluster0-gnjs1.mongodb.net/test?retryWrites=true&w=majority
+USER = 'simplonportfolio@gmail.com'
+PSW = 'Simplonco94' 
