--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "node app.js"
   },
   "author": "",
+  "engines": {
+    "node": "10.16.3"
+  },
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
